--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <header class="header" data-menu>
+      <header class="header" data-menu data-popup-offset-padding>
         <div class="container">
           <div class="header__wrapper">
             <a class="header__loog" href="./index.html"
