--- a/index-dev.html
+++ b/index-dev.html
@@ -57,6 +57,7 @@
         <a href="./index.html" target="_blank">Главная</a>
         <a href="./contact-info.html" target="_blank">Контактная информация</a>
         <a href="./passport-details.html" target="_blank">Паспортные данные</a>
+        <a href="./data-check.html" target="_blank">Проверка данных</a>
       </div>
     </div>
   </body>
