--- a/index-dev.html
+++ b/index-dev.html
@@ -58,6 +58,12 @@
         <a href="./contact-info.html" target="_blank">Контактная информация</a>
         <a href="./passport-details.html" target="_blank">Паспортные данные</a>
         <a href="./data-check.html" target="_blank">Проверка данных</a>
+        <a href="./identification.html" target="_blank"
+          >Идентификация пользователя</a
+        >
+        <a href="./signin.html" target="_blank">Выход</a>
+        <a href="./unsubscribe.html" target="_blank">Отмена подписки</a>
+        <a href="./get-offers.html" target="_blank">Займы</a>
       </div>
     </div>
   </body>
