--- a/index-dev.html
+++ b/index-dev.html
@@ -64,6 +64,8 @@
         <a href="./signin.html" target="_blank">Выход</a>
         <a href="./unsubscribe.html" target="_blank">Отмена подписки</a>
         <a href="./get-offers.html" target="_blank">Займы</a>
+        <a href="./feedback.html" target="_blank">Форма обратной связи</a>
+        <a href="./not-found.html" target="_blank">404</a>
       </div>
     </div>
   </body>
