--- a/get-offers.html
+++ b/get-offers.html
@@ -37,7 +37,7 @@
                 </div>
               </div>
               <a class="header__menu-button button button_icon" href="#"
-                ><svg>
+                ><svg class="header__menu-icon">
                   <use
                     href="./images/sprite.svg#user"
                     xlink:href="./images/sprite.svg#user"
