--- a/data-check.html
+++ b/data-check.html
@@ -77,7 +77,7 @@
           <div class="container">
             <div class="data-check__wrapper">
               <div class="data-check__status">
-                <video muted loop class="data-check__video">
+                <video autoplay muted loop class="data-check__video">
                   <source
                     src="./videos/data-check/video_01.mp4"
                     type="video/mp4"
