--- a/data-check.html
+++ b/data-check.html
@@ -75,21 +75,25 @@
       <main class="content">
         <div class="data-check">
           <div class="container">
-            <div class="data-check__wrapper">
-              <div class="data-check__status">
-                <video autoplay muted loop class="data-check__video">
-                  <source
-                    src="./videos/data-check/video_01.mp4"
-                    type="video/mp4"
-                  /></video
-                ><span class="data-check__percent">0%</span>
+            <div class="main-block">
+              <div class="main-block__body">
+                <div class="data-check__head">
+                  <div class="data-check__status">
+                    <video autoplay muted loop class="data-check__video">
+                      <source
+                        src="./videos/data-check/video_01.mp4"
+                        type="video/mp4"
+                      /></video
+                    ><span class="data-check__percent">0%</span>
+                  </div>
+                </div>
+                <h2 class="data-check__title">Проверяем ваши данные</h2>
+                <span class="data-check__subtitle"
+                  >Наши алгоритмы обрабатывают введенную Вами информацию на двух
+                  предыдущих страницах. Это займет менее 10 секунд. Пожалуйста,
+                  не закрывайте эту страницу.</span
+                >
               </div>
-              <h2 class="data-check__title">Проверяем ваши данные</h2>
-              <span class="data-check__subtitle"
-                >Наши алгоритмы обрабатывают введенную Вами информацию на двух
-                предыдущих страницах. Это займет менее 10 секунд. Пожалуйста, не
-                закрывайте эту страницу.</span
-              >
             </div>
           </div>
         </div>
