--- a/profile.html
+++ b/profile.html
@@ -402,7 +402,15 @@
                       >
                       <div class="scoring__current">
                         <div class="scoring__points">
-                          <video autoplay muted loop class="scoring__video">
+                          <video
+                            class="scoring__video"
+                            width="100%"
+                            height="100%"
+                            playsinline
+                            autoplay
+                            muted
+                            loop
+                          >
                             <source
                               src="./videos/scoring/video_01.mp4"
                               type="video/mp4"
