--- a/index-dev.html
+++ b/index-dev.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preview</title>
-  </head>
-
-  <style>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Preview</title></head
+  ><style>
     html,
     body {
       height: 100%;
@@ -53,7 +51,6 @@
       gap: 15px;
     }
   </style>
-
   <body>
     <div class="wrapper">
       <div class="links">
@@ -62,7 +59,9 @@
         <a href="./contact-info.html" target="_blank">Контактная информация</a>
         <a href="./passport-details.html" target="_blank">Паспортные данные</a>
         <a href="./data-check.html" target="_blank">Проверка данных</a>
-        <a href="./identification.html" target="_blank">Идентификация пользователя</a>
+        <a href="./identification.html" target="_blank"
+          >Идентификация пользователя</a
+        >
         <a href="./signin.html" target="_blank">Выход</a>
         <a href="./unsubscribe.html" target="_blank">Отмена подписки</a>
         <a href="./get-offers.html" target="_blank">Займы</a>
