--- a/binding.html
+++ b/binding.html
@@ -18,9 +18,9 @@
         font-style: normal;
         font-weight: 400;
         src: local('Golos'), local('Golos'),
-          url('../fonts/golos/GolosText-Regular.woff2') format('woff2'),
-          url('../fonts/golos/GolosText-Regular.woff') format('woff'),
-          url('../fonts/golos/GolosText-Regular.ttf') format('truetype');
+          url('./fonts/golos/GolosText-Regular.woff2') format('woff2'),
+          url('./fonts/golos/GolosText-Regular.woff') format('woff'),
+          url('./fonts/golos/GolosText-Regular.ttf') format('truetype');
       }
 
       @font-face {
@@ -28,9 +28,9 @@
         font-style: normal;
         font-weight: 500;
         src: local('Golos'), local('Golos'),
-          url('../fonts/golos/GolosText-Medium.woff2') format('woff2'),
-          url('../fonts/golos/GolosText-Medium.woff') format('woff'),
-          url('../fonts/golos/GolosText-Medium.ttf') format('truetype');
+          url('./fonts/golos/GolosText-Medium.woff2') format('woff2'),
+          url('./fonts/golos/GolosText-Medium.woff') format('woff'),
+          url('./fonts/golos/GolosText-Medium.ttf') format('truetype');
       }
 
       * {
