--- a/rating.html
+++ b/rating.html
@@ -20,7 +20,7 @@
         <div class="container">
           <div class="header__wrapper">
             <a class="header__loog" href="./index.html"
-              ><img src="./images/header/logo.svg" alt="logo"
+              ><img src="./images/header/logo_02.svg" alt="logo"
             /></a>
             <div class="header__menu">
               <div class="header__actions">
